--- a/_output/pseudocode.html
+++ b/_output/pseudocode.html
@@ -317,7 +317,37 @@ simulate_craps_game &lt;- function() {
 </section>
 <section id="planning-for-implementation" class="level2">
 <h2 class="anchored" data-anchor-id="planning-for-implementation">Planning for implementation</h2>
-<p>What parts are still missing for you to write code implementing craps based on your pseudocode? What do you expect you will need to do before/during the coding process? Make a plan for next week’s work. Where will you start?</p>
+<section id="what-parts-are-still-missing-for-you-to-write-code-implementing-craps-based-on-your-pseudocode" class="level3">
+<h3 class="anchored" data-anchor-id="what-parts-are-still-missing-for-you-to-write-code-implementing-craps-based-on-your-pseudocode">What parts are still missing for you to write code implementing craps based on your pseudocode?</h3>
+<ul>
+<li>Double-check edge cases and special scenarios to ensure the functions handle all possible game states.</li>
+<li>Validate input and output formats for robustness.</li>
+</ul>
+</section>
+<section id="what-do-you-expect-you-will-need-to-do-beforeduring-the-coding-process" class="level3">
+<h3 class="anchored" data-anchor-id="what-do-you-expect-you-will-need-to-do-beforeduring-the-coding-process">What do you expect you will need to do before/during the coding process?</h3>
+<ul>
+<li>We may need to debug and adjust as you integrate the functions together, especially to ensure data integrity across multiple rolls and games.</li>
+<li>Prepare for performance optimization if simulating a large number of games.</li>
+</ul>
+</section>
+<section id="plan-for-next-weeks-work" class="level3">
+<h3 class="anchored" data-anchor-id="plan-for-next-weeks-work">Plan for Next Week’s Work</h3>
+<ol type="1">
+<li><p><strong>Review and Refine Pseudocode</strong><br>
+Ensure logical consistency and add comments for clarity.</p></li>
+<li><p><strong>Unit Testing for Individual Functions</strong><br>
+Validate the correct behavior of each function (e.g., <code>eval_first_roll()</code>, <code>roll_dice()</code>).</p></li>
+<li><p><strong>Integrate Functions into the Main Game Simulation</strong><br>
+Run test cases to confirm that the integrated functions work together correctly.</p></li>
+<li><p><strong>Run Larger Simulations</strong></p>
+<ul>
+<li>Summarize data.</li>
+<li>Optimize for performance.</li>
+<li>Document the process thoroughly.</li>
+</ul></li>
+</ol>
+</section>
 </section>
 </section>
 
